Allow store secrets to execute even if there are no changes. Make the build produce a distribution with custom JRE.